--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@
 locale                   : "en-US"
 title                    : "Juren Li's Homepage"
 title_separator          : "-"
-name                     : &name "Juren Li"
-description              : &description "personal description"
+name                     : "Juren Li"
+description              : "Ph.D. student at Zhejiang University. Main research focus: data mining and machine learning for sequence data."
 url                      : https://JuRenGithub.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "JurenGithub/JurenGithub.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Juren Li (李举仁)"
   pronouns         : # example: "she/her"  
-  bio              : "3rd Ph.D Student @ ZJU"
+  bio              : "4th Ph.D Student @ ZJU"
   location         : "Hangzhou, China"
   employer         : "Zhejiang University"
   uri              : #'JurenGithub/JurenGithub.github.io'
